k3s/hub/server-deploy.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service-server
  namespace: default
spec:
  ports:
    - name: web
      port: 13001
      targetPort: 13001
      protocol: TCP
  type: ClusterIP

---
# endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-server
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.4.92
    ports:
      - name: web
        port: 13001
        protocol: TCP

---
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub-ingress-server
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: railsapi.carter2099.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-service-server
                port:
                  number: 13001
